added resize widget and fixed full vertical as default height

--- a/newtab.html
+++ b/newtab.html
@@ -96,8 +96,8 @@
   <body class="light-mode">
     <div class="container">
       <div class="header">
-        <button id="themeToggle">&#x1F317; Toggle Theme</button>
-        <button id="saveNote">&#x1F4BE; Save Note</button>
+        <button id="themeToggle">&#x1F317;</button>
+        <button id="saveNote">&#x1F4BE;</button>
       </div>
       <textarea
         id="notepad"
